--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://unpkg.com/@csstools/normalize.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merienda">
     <title>CSS Responsive Web Design & Key Concepts</title>
 </head>
 
@@ -26,7 +27,14 @@
         force dog to sleep on floor. Have secret plans sleeps on my head do doodoo in the litter-box, clickityclack on
         the piano, be frumpygrumpy. Play with twist ties. Eat half my food and ask for more. Show belly play with twist
         ties. The dog smells bad.</p>
-
+    <div>
+        <ul class="navbar">
+            <a href="">Home</a>
+            <a href="">Cats</a>
+            <a href="">Contact</a>
+            <a href="">About</a>
+        </ul> 
+    </div> 
     <div class="card-container">
 
         <div class="card">
